Use Java11 syntax for CDK